# PropertyAiBot

./: .dockerignore  .gitignore  Makefile  README.md  bot.py  chunks.py  create_assistent.py  dialogue.txt  docker-compose.yaml  entrypoint.sh  instructions.txt  nginx.conf  properties.csv  properties.json  pyproject.toml  test.py  texts.json  update_assistant.py  update_file.py
bot/: admin.py  config.py  models.py  urls.py  views.py
bot/handlers/: main_segregations.py
bot/keyboards/: pagination_kb.py
bot/middleware/: openai_assistant.py
bot/migrations/: 0001_initial.py  0002_alter_property_build_year.py  0002_alter_property_currency.py  0003_alter_property_district_alter_property_street.py  0003_alter_tguser_email_alter_tguser_username.py  0004_alter_property_building_number.py  0005_alter_property_description.py
bot/misc/: mailing.py  set_bot_commands.py
bot/services/: assistant_manager.py  chat_session.py  db_manager.py  property_manager.py  thread_manager.py  xml_parser.py
bot/utils/: db.py  fabrics.py  update_file.py
core/: assistant_settings.py
docker_admin/: Dockerfile
docker_bot/: Dockerfile
package/: create_superuser.py  settings.py  urls.py
package/utils/: update_file.py
static/: chat_update.js  update_all_chats.js
static/css/: chat.css
templates/: base.html
templates/tgbot/: chat.html  chats_menu.html  messages.html
