[tool.poetry]
name = "propertyaibot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aiogram = "^3.0.0"
django = "^4.2.5"
whitenoise = "^6.5.0"
dj-database-url = "^2.1.0"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"
apscheduler = "^3.10.4"
requests = "^2.31.0"
openai = "^1.3.3"
gpt3-tokenizer = "^0.1.4"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
